--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,6 @@
   </head>
 
   <body>
-  <% if flash[:notice] %>
-  <div class="notification is-success global-notification">
-    <p class="notice"><%= notice %></p>
-  </div>
- <% end %>
-<% if flash[:alert] %>
-<div class="notification is-danger global-notification">
-  <p class="alert"><%= alert %></p>
-</div>
-<% end %>
  <nav class="navbar is-link" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <%= link_to root_path, class:"navbar-item" do %>
@@ -58,6 +48,16 @@
     </div>
 </div>
 </nav>
+<% if flash[:notice] %>
+<div class="notification is-success global-notification">
+  <p class="notice text-center"><%= notice %></p>
+</div>
+<% end %>
+<% if flash[:alert] %>
+<div class="notification is-danger global-notification">
+<p class="alert text-center"><%= alert %></p>
+</div>
+<% end %>
     <%= yield %>
   </body>
 </html>
