--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -7,6 +7,7 @@
     <%= f.input :name %>
     <%= f.input :location %>
     <%= f.input :description %>
+    <%= f.input :date %>
     <%= f.input :start_time %>
     <%= f.input :end_time %>
   </div>
