--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PrivateEvents</title>
+    <title>Private Events</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -13,7 +13,7 @@
  <nav class="navbar is-link" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <%= link_to root_path, class:"navbar-item" do %>
-      <h1 class="title is-5 has-text-white">Private Event</h1>
+      <h1 class="title is-5 has-text-white">Private Events</h1>
     <% end  %>
   <div class="navbar-burger burger" data-target="navbar">
     <span></span>
