--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -8,8 +8,7 @@
       <th>Name</th>
       <th>Location</th>
       <th>Description</th>
-      <th>Start time</th>
-      <th>End time</th>
+      <th>Date</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,7 +21,6 @@
         <td><%= event.description %></td>
         <td><%= event.date %></td>
         <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Attend', event %></td>
       </tr>
     <% end %>
   </tbody>
@@ -37,7 +35,6 @@
         <td><%= event.location %></td>
         <td><%= event.description %></td>
         <td><%= event.date %></td>
-         <td><%= link_to 'Show', event %></td>
      </tr>
     <% end %>
   </tbody>
