--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -16,13 +16,8 @@
 </p>
 
 <p>
-  <strong>Start time:</strong>
-  <%= @event.start_time %>
-</p>
-
-<p>
-  <strong>End time:</strong>
-  <%= @event.end_time %>
+  <strong>Date:</strong>
+  <%= @event.date %>
 </p>
 
 <strong>Attendees</strong>
