--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
         <%= link_to 'Event', '#', class: "navbar-link" %>
         <div class="navbar-dropdown">
         <%= link_to 'All Events', events_path , class:"navbar-item" %>
-        <%= link_to 'Events Attending', events_path , class:"navbar-item" %>
+        <%= link_to 'Events Attending', users_path , class:"navbar-item" %>
         </div>
       </div>
       <%= link_to 'Create New Event', new_event_path, class:"navbar-item" %>
