added future event view

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,10 @@
-<% if current_user.attend!(@event).any? %>
-<%= render attended_events %>
-<% else %>
-The user has not signed up to attend any events yet.		
-<% end %>
-<%= form_for(current_user.event_attendees.build(attended_event_id: @event.id)) do |f| %>
-	<%= f.hidden_field :attended_event_id %>
-		<%= f.submit "Attend", class: "btn btn-sm btn-primary" %>
-	<% end %>
+<h2>Upcoming events (<%= @future_events.count %>)</h2>
+  <tbody>
+    <% @future_events.each do |event| %>
+      <tr>
+        <td><%= event.name %></td>
+        <td><%= event.date %></td>
+        <td><%= link_to 'Show', event %></td>
+      </tr>
+    <% end %>
+  </tbody>
