added more logic to helper

--- a/app/views/events/_attend.html.erb
+++ b/app/views/events/_attend.html.erb
@@ -1,5 +1,1 @@
-<% if user_signed_in? && current_user.attending?(@event) %> 
-	<%= render 'cancel_event' %>
-<% else %>
-	<%= render 'attend_event' %>
-<% end %>
+<%= attend(current_user)%>
