--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,28 +12,7 @@
 
 <div id="navbar" class="navbar-menu">
   <div class="navbar-end">
-    <% if user_signed_in? %>
-    <div class="navbar-item has-dropdown is-hoverable">
-      <%= link_to 'Event', '#', class: "navbar-link" %>
-      <div class="navbar-dropdown">
-      <%= link_to 'All Events', events_path , class:"navbar-item" %>
-      <%= link_to 'Events Attending', users_path , class:"navbar-item" %>
-      </div>
-    </div>
-    <%= link_to 'Create New Event', new_event_path, class:"navbar-item" %>
-    <div class="navbar-item has-dropdown is-hoverable">
-      <%= link_to 'Account', edit_user_registration_path, class: "navbar-link" %>
-      <div class="navbar-dropdown is-right">
-        <%= link_to current_user.username, edit_user_registration_path, class:"navbar-item" %>
-        <%= link_to "Log Out", destroy_user_session_path, method: :delete, class:"navbar-item" %>
-      </div>
-    </div>
-   <% else %>
-   <%= link_to 'Events', events_path , class:"navbar-item" %>
-    <%= link_to "Sign In", new_user_session_path, class:"navbar-item" %>
-    <%= link_to "Sign up", new_user_registration_path, class:"navbar-item"%>
-    <% end %>
-
+        <%= login_helper(current_user) %>
   </div>
 </div>
 </nav>
