change a list of attendees

--- a/app/views/events/_attendee_list.html.erb
+++ b/app/views/events/_attendee_list.html.erb
@@ -1,6 +1,8 @@
 <% if @event.attendees.any? %>
 <% @event.attendees.each do |attendee| %>
-        <%= attendee.username %>
+<ol>
+        <li><%= attendee.username %></li>
+        </ol>
 <% end %>
 <% else %>
 No attendees
