--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -8,6 +8,7 @@
     <%= f.input :location %>
     <%= f.input :description %>
     <%= f.input :date %>
+    <%= f.input :creator_id %>
   </div>
 
   <div class="form-actions">
