fix rubocop errors

--- a/app/views/events/_attendee_list.html.erb
+++ b/app/views/events/_attendee_list.html.erb
@@ -1,4 +1,7 @@
 
   <% @event.attendees.each do |attendee| %>
-        <%= attendee.username %>
+        <ol>
+          <li><%= attendee.username %>
+          </li>
+          <ol>
   <% end %>
