--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Events (<%= @future_events.count + @past_events.count %>)</h1>
+<h1>Events (<%= @future_events.count + @past_events.count if  @future_events..present? || @past_events.present?%>)</h1>
 
 <table>
   <thead>
@@ -12,9 +12,10 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-<h2>Upcoming events (<%= @future_events.count %>)</h2>
+<h2>Upcoming events (<%= @future_events.count if @future_events.present? %>)</h2>
   <tbody>
-    <% @future_events.each do |event| %>
+  <% if @future_events..present? %>
+    <% @future_events.each do |event|%>
       <tr>
         <td><%= event.name %></td>
         <td><%= event.location %></td>
@@ -23,12 +24,14 @@
         <td><%= link_to 'Show', event %></td>
       </tr>
     <% end %>
+    <% end %>
   </tbody>
 </table>
 
-<h2>Previous events (<%= @past_events.count %>)</h2>
+<h2>Previous events (<%= @past_events.count if @past_events.present? %>)</h2>
 <table>
   <tbody>
+  <% if @past_events.present? %>
     <% @past_events.each do |event| %>
       <tr>
         <td><%= event.name %></td>
@@ -37,6 +40,7 @@
         <td><%= event.date %></td>
          <td><%= link_to 'Show', event %></td>
      </tr>
+    <% end %>
     <% end %>
   </tbody>
 </table>
